Increase maximum heap size for tool products Rename eclipse.ini to <productname>.ini because otherwise it is not recognized